--- a/sources.html
+++ b/sources.html
@@ -44,9 +44,13 @@
         <div class="content">
             <div class="title" id="Importance"> Research Sources</div> <br>
             <ul>
-                Ash. "The Advantages and Disadvantages of Smart Technology." Techslax, 16 Jan. 2023, techslax.com/technology/the-advantages-and-disadvantages-of-smart-technology/. Accessed 29 Apr. 2024.
-                "8 Main Benefits of Sustainable Transportation: Promoting a Greener Future." Scale Climate Action, 16 June 2023, scaleclimateaction.org/transportation/sustainable-transportation/8-main-benefits-of-sustainable-transportation-promoting-a-greener-future/#:~:text=By%20promoting%20the%20use%20of%20cleaner%20fuels%20and,change%2C%20improving%20air%20quality%2C%20and%20preserving%20natural%20resources.
-
+                <li>Ash. "The Advantages and Disadvantages of Smart Technology." Techslax, 16 Jan. 2023, techslax.com/technology/the-advantages-and-disadvantages-of-smart-technology/. Accessed 29 Apr. 2024.</li>
+                <li>"8 Main Benefits of Sustainable Transportation: Promoting a Greener Future." Scale Climate Action, 16 June 2023, scaleclimateaction.org/transportation/sustainable-transportation/8-main-benefits-of-sustainable-transportation-promoting-a-greener-future/#:~:text=By%20promoting%20the%20use%20of%20cleaner%20fuels%20and,change%2C%20improving%20air%20quality%2C%20and%20preserving%20natural%20resources.</li>
+                <li>Evans, Marni. "Benefits of Water Conservation." Live About DotCom, 4 Dec. 2020, www.liveabout.com/conservation-efforts-why-should-we-save-water-3157877. Accessed 29 Apr. 2024.</li>
+                <li>Grid, National. "Energy Explained." National Grid, Aug. 2023, www.nationalgrid.com/stories/energy-explained/what-is-green-energy. Accessed 29 Apr. 2024.</li>
+                <li> "The Importance of Water Conservation." Sustainably Forward, sustainablyforward.com/the-importance-of-water-conservation/#:~:text=Water%20Conservation%20Key%20Takeaways%3A%201%20The%20importance%20of,the%20impacts%20of%20water%20scarcity%20on%20natural%20habitats. Accessed 29 Apr. 2024.</li>
+                <li> Lassen, Thomas. "What Is Green Energy and Why Is It Important ?" Sustainable Wave, 19 June 2023, sustainablewave.com/what-is-green-energy/. Accessed 29 Apr. 2024. </li>
+                <li> Rosen, Andy. "Solar Tax Credit: What It Is and How It Works In 2024." NerdWallet, 14 Feb. 2024, www.nerdwallet.com/article/taxes/solar-tax-credit. Accessed 29 Apr. 2024.</li>
             </ul>
         </div>
     </div>
