--- a/sources.html
+++ b/sources.html
@@ -59,10 +59,14 @@
 <section class="sec-4">
     <div class="about">
         <div class="content">
-            <div class="title" id="brief"> Project Brief</div> <br>
-            <p> The amount of energy we use has a huge impact on climate change. The temperature went up by 1.5 degrees celsius during the past year, and the temperature is projected to increase by 2.5 more degrees celsius by 2030, which is 20 years less than expected, that being 2050. This needs to be slowed down, so we need to start using renewable energy, which helps develop our houses into eco-friendly areas. The rate of climate change would decrease due to this practice. This website was made to help compile information for homeowners on green and clean energy home solutions and other initiatives. This website provides the basic information, cost, tax rebates, and green/clean energy practices that homeowners can use. </p><br>
-            <h2> Our Mission: </h2>
-            <p> Our goal, by this website, is to hopefully convice you to start your clean energy journey. Even a single implementation of LED lights in your house will mean a success to us. Little Drops make an ocean.</p>
+            <div class="title" id="brief"> Work Log/Copyright Form</div> <br>
+        <p>
+            <ul>
+                <li> <a href="plan-of-work-log(1).pdf"> Work Log 1 </a> </li>
+                <li> <a href = "plan-of-work-log(2).pdf"> Work Log 2</a></li>
+                <li> <a href="scan_cmcowell_2024-04-29-15-20-24 (1) (1).pdf"> Copyright Form</a> </li>
+            </ul>
+        </p>
         </div>
     </div>
 </section>
